--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool]
 [tool.poetry]
 name = "drf-oa-workflow"
-version = "0.4.8"
+version = "0.4.9"
 homepage = "https://github.com/wccdev/drf-oa-workflow"
 description = "Skeleton project created by Cookiecutter PyPackage."
 authors = ["Leslie CHan <ampedee@gmail.com>"]
@@ -23,29 +23,17 @@ packages = [
     { include = "tests", format = "sdist" },
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.8,<4.0"
-
-black  = { version = "^21.5b2", optional = true}
+[tool.poetry.group.dev.dependencies]
+black = "^23.12.1"
+pre-commit = {version = "^2.12.0", optional = true}
+pytest = "^7.4.4"
 isort  = { version = "^5.8.0", optional = true}
 flake8  = { version = "^3.9.2", optional = true}
 flake8-docstrings = { version = "^1.6.0", optional = true }
-mypy = {version = "^0.900", optional = true}
-pytest  = { version = "^6.2.4", optional = true}
-pytest-cov  = { version = "^2.12.0", optional = true}
-tox  = { version = "^3.20.1", optional = true}
-virtualenv  = { version = "^20.2.2", optional = true}
+
+[tool.poetry.dependencies]
+python = ">=3.8,<4.0"
 pip  = { version = "^20.3.1", optional = true}
-mkdocs  = { version = "^1.1.2", optional = true}
-mkdocs-include-markdown-plugin  = { version = "^1.0.0", optional = true}
-mkdocs-material  = { version = "^6.1.7", optional = true}
-mkdocstrings  = { version = "^0.15.2", optional = true}
-mkdocs-material-extensions  = { version = "^1.0.1", optional = true}
-twine  = { version = "^3.3.0", optional = true}
-mkdocs-autorefs = {version = "^0.2.1", optional = true}
-pre-commit = {version = "^2.12.0", optional = true}
-toml = {version = "^0.10.2", optional = true}
-bump2version = {version = "^1.0.1", optional = true}
 pycryptodome = "^3.19.0"
 requests = "^2.31.0"
 django = ">=3.2"
