--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,10 +7,19 @@
 # documentation.
 
 
-name: Build and publish to WCC Python package repository
-uses: JRubics/poetry-publish@v1.17
-with:
-  repository_name: "WCC-PYPI"
-  repository_url: "https://pypi.wochacha.cn/"
-  repository_username: ${{ WCC_PYPI_USERNAME }}
-  repository_password: ${{ WCC_PYPI_PASSWORD }}
+name: drf-oa-workflow
+on:
+  push:
+    tags:
+      - "v*.*.*"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build and publish to WCC Python package repository
+      - uses: JRubics/poetry-publish@v1.17
+        with:
+          repository_name: "WCC-PYPI"
+          repository_url: "https://pypi.wochacha.cn/"
+          repository_username: ${{ WCC_PYPI_USERNAME }}
+          repository_password: ${{ WCC_PYPI_PASSWORD }}
