--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           repository_name: "WCC-PYPI"
           repository_url: "https://pypi.wochacha.cn/"
-          repository_username: "${{ secrets.WCC_PYPI_USERNAME }}"
-          repository_password: "${{ secrets.WCC_PYPI_PASSWORD }}"
+          repository_username: ${{ secrets.WCC_PYPI_USERNAME }}
+          repository_password: ${{ secrets.WCC_PYPI_PASSWORD }}
