--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ django = ">=3.2"
 djangorestframework = "^3.14.0"
 cx-oracle = "^8.3.0"
 django-filter = "^24.2"
+drf-spectacular = "^0.27.2"
 
 [tool.poetry.extras]
 test = [
