--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ flake8  = { version = "^3.9.2", optional = true}
 flake8-docstrings = { version = "^1.6.0", optional = true }
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
-pip  = { version = "^20.3.1", optional = true}
+python = ">=3.10,<4.0"
+pip  = { version = ">=21.3.1", optional = true}
 pycryptodome = "^3.19.0"
 requests = "^2.31.0"
 django = ">=3.2"
@@ -41,6 +41,7 @@ djangorestframework = "^3.14.0"
 cx-oracle = "^8.3.0"
 django-filter = "^24.2"
 drf-spectacular = "^0.27.2"
+drfexts = "^3.11.1"
 
 [tool.poetry.extras]
 test = [
